TINY-4579: added new setAttributesOnViewElement api and style for remote rtc images

--- a/modules/oxide/src/less/theme/content/rtc/rtc.less
+++ b/modules/oxide/src/less/theme/content/rtc/rtc.less
@@ -81,3 +81,11 @@
 .rtc-user-selection--8 .rtc-user-cursor {
   background-color: @rtc-caret-8-color;
 }
+
+.rtc-remote-image {
+  background: #eaeaea;
+  border: 1px solid #bbb;
+  display: inline-block;
+  min-height: 240px;
+  min-width: 320px;
+}
