--- a/modules/oxide/src/less/skins/content/dark/content.less
+++ b/modules/oxide/src/less/skins/content/dark/content.less
@@ -10,7 +10,8 @@
 //
 
 body {
-  background-color: #2f3742;
+  // @todo 업데이트시 반영할 것. iframe 내부의 body에서는 투명 배경 사용. 바깥의 body에서 dark 배경색 적용하도록 함.
+  // background-color: #2f3742;
   color: #dfe0e4;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.4;
@@ -25,9 +26,26 @@ table {
   border-collapse: collapse;
 }
 
+// @todo tinymce 업그레이드 시 반영할 것.
+// table th,
+// table td {
+//   border: 1px solid #6d737b;
+//   padding: .4rem;
+// }
+
+// @todo tinymce 업그레이드 시 반영할 것.
 table th,
 table td {
-  border: 1px solid #6d737b;
+  border: unset;
+  padding: unset;
+}
+
+// @todo tinymce 업그레이드 시 반영할 것.
+table[data-mce-selected] > * > th,
+table[data-mce-selected] > * > td,
+table[data-mce-selected] > * > * > th,
+table[data-mce-selected] > * > * > td {
+  border: 1px dotted #ccc;
   padding: .4rem;
 }
 
